# project_one

./: .env  .gitmodules  README.MD  README.md  docker-compose-integration-test.yml  docker-compose-test.yml  docker-compose.yml  pytest.ini
backend/: requirements.txt
backend/app/: database.py  main.py  models.py  schemas.py  websocket_manager.py
commonpackages/: pyproject.toml
commonpackages/src/: __init__.py  models.py  sensor.py
docs/: architecture.md  use-case-example.md  use-in-other-projects.md
gateway/: Dockerfile
gateway/app/: main.py  models.py  schemas.py
iotconsumer/: Dockerfile  consumer.py  requirements.txt
services/gateway/: Dockerfile  requirements.txt
services/gateway/app/: database.py  models.py  schemas.py
services/iotconsumer/: Dockerfile  consumer.py
sharedobjects/: __init__.py  pyproject.toml  setup.cfg
tests/integration/: Dockerfile  requirements.txt  simulate_sensors.py
tests/unit/: Dockerfile  conftest.py  requirements.txt  test_gateway_api.py  test_models.py  test_sensor.py  test_website_api.py
website/: Dockerfile  requirements.txt
website/app/: main.py
website/app/static/: style.css
website/app/templates/: index.html
