[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharedobjects"
version = "0.1.0"
description = "Shared models and utilities for project_one services"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",  # if using Pydantic models
    "psycopg2-binary>=2.9.0",  # if using PostgreSQL
]


[tool.setuptools]
packages = ["sharedobjects"]